# telecom-customer-analytics-platform

./: .env.example  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  OPERATIONS.md  README.md  docker-compose.yml  pyproject.toml  sample_customer.json
.github/workflows/: test.yml
docs/: adr-001-customer-insight-service.md
frontend/: index.html  package.json
frontend/src/: main.jsx  styles.css
src/telecom_analytics/: __init__.py  api.py  churn_model.py  cli.py  config.py  data.py  data_generator.py  features.py  generator.py  model.py  schemas.py  segmentation.py  service.py
tests/: test_api.py  test_generator.py  test_model.py  test_service.py
